note en tête de l'annexe

--- a/ipythonDocs/Impression_code.ipynb
+++ b/ipythonDocs/Impression_code.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Annexes - Code"
+    "# Annexe - Code\n",
+    "Pour l'impression des programmes, nous avons utilisé iPython, et créé un notebook rassemblant l'ensemble de notre code."
    ]
   },
   {
@@ -1284,15 +1285,6 @@
     "\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
